App: Ctrl+Alt+MouseWheel to change zoom level in any window  (Ctrl-Zero as always to reset)
Call Roster: Fixed PR showing as a wanted US State
Call Roster: Very long "Watcher" values now displayed with "..." 
Chat: Left-click a callsign will do a lookup
Stats-Logbook: Added "Current Day UTC" filter checkbox to "When" column


Map: Fixed distant grid distortions in AEQD projection
App: Fixed missing JA grids
App: Fixed issue where MSHV not reporting TX_PWR
Award Tracker: Fixed QRZ.com 'Masters of ...' scoring
N3FJP ACL: Fixed grid not appearing in GT status panel
N3FJP ACL: New log entry will automatically be added when QSO completed

App: Updated Electron engine to v35.1.2 (except for Windows 7)
App: Added DYNAMIC as recognized mode
App: Added "New Message Alert" to Settings -> Features -> Online -> Chat Messaging .. default is none
App: Added new media files "Message-Abrupt|AIM|Bosun|Bright|Gentle|ICQ|Mild-Echo|MSN|Nokia|RIM"
Logging: Fixed issue when logging to the backup log (if enabled) when callsign contains '/' 


Logging: New optional feature to receive ADIF UDP Broadcasts from apps like fldigi and log just like WSJT-X log events
            (Settings -> General -> Recive ADIF UDP Broadcasts For Logging)
Linux: Added "HamRadio" to the gridtracker2.desktop category
App: Updated initial install Big CTY data to version April 6th, 2025
App: Big CTY update check now at 2 miuntes from start instead of 5 minutes
            (Provides additional notification of update in the waterfall as well as Settings -> Lookups)
Logging: Fixed ADIF CNTY field when logging (removed space after comma)


Logging -> Cloudlog: Fixed logging issue after startup
Stats -> Logbook: Added County column
Stats -> Logbook: Added State and County searching, sorting
Stats -> WPX: Added US counties, now [WPX / USC] tab
Stats -> Live: Fixed issue with DXCC count and live refresh
App: Updated initial install Big CTY data to version April 12th, 2025

### Fixed


### Removed


[unreleased]: 