@@ -1685,6 +1685,19 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
           </tr>
         </table>
       </div>
+      <div class="mapItem">
+        <table align="center">
+          <tr>
+            <td align="center">'All Grid Overlay' Opacity</td>
+            <td align="left" id="allGridOpacityTd">100%</td>
+          </tr>
+          <tr align="center">
+            <td colspan="2">
+              <input type="range" min="0.01" max="1" value="1" step="0.01" class="slider" id="allGridOpacityValue" oninput="setAllGridOpacity();" />
+            </td>
+          </tr>
+        </table>
+      </div>
     </div>
     <div id="mapSettingsDiv" class="settingsTabcontent" style="background-color: #00000044; text-shadow: 0 0 5px #000000ff">
       <div class="flexSettingDiv">
